[project]
name = "langgraph-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain[anthropic]>=1.2.15",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
]
